# impg

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  Dockerfile  HPRC_r2_assemblies_0.6.1.agc  LICENSE  README.md  build.rs  deps.scm  env.sh  flake.nix  guix.scm  hprc465vschm13.aln.paf.gz.gzi  hprc465vschm13.aln.paf.gz.impg  manifest.scm  metadata
.github/workflows/: publish_docker_hub.yml  rust_build_test.yml
.guix/modules/impg/: bioinformatics.scm  impg.scm  rust-crates.scm
benches/: crush.rs
data/c4_aggressive_motif_matrix_20260605T210000Z/reports/: c4.k311.poa.motif25k.cand512.iter8.Ygs.graph-report.tsv
data/c4_self_loop_normalization_20260605T130000Z/: seed.Ygs.graph-report.tsv
data/c4_smoke_report_20260606T075500Z/: README.md
data/c4_threshold_sweep_20260603T154441Z/: README.md  manifest.json  metrics.tsv  path-validation.tsv  run_c4_threshold_sweep.py  seed.graph-report.tsv  seed_path_validation.json  summary.tsv  uploads.tsv
data/evaluate_abpoa_as_20260604T181500Z/: abpoa_vs_c4_cap64_diag.summary.tsv  c4_slice_abpoa.graph-report.tsv  c4_slice_abpoa.path-preservation.tsv  c4_slice_abpoa.time.txt  c4_slice_input.graph-report.tsv
docs/: audit-eliminate-synthetic-local-ids.md  c4-blocker-01-poasta-scale.md  c4-blocker-02-residual-routing.md  c4-blocker-03-full-rerun-scoreboard.md  c4-blocker-04-stop.md  c4-blocker-05b-complete-traversal-aggregation.md  c4-cmaes-optimizer.md  c4-cmaes-results.md  c4-cmaes-target-shape-results.md  c4-crush-handoff.md  c4-fragment-regression-suite.md  c4-hard-seqwish-k-sweep.md  c4-highfreq-mask-crush-sweep.md  c4-k311-1to1-noscaffold-shorttmp-20260606.md  c4-node-path-coverage.md  c4-self-loop-repeat-normalization.md  c4-unified-highfreq-mask.md  c4-whole-region-sweepga-seed.md  calibrate-spectrum-driven-20260530.md  coverage-driven-repeat-c4.md  crush-aligner-deep-diag.md  crush-aligner-failure-trace.md  crush-aligner-speed-study.md  crush-architecture-spec.md  crush-audit.md  crush-bail-removal.md  crush-big-bubble-diag.md  crush-chain-greedy-walk.md  crush-chain-povu-tree-blocks.md  crush-design-fix.md  crush-design.md  crush-dispatch-floor-and-gfaffix.md  crush-exp-allwave-k31.md  crush-exp-auto-fixed-filter.md  crush-exp-auto-k31.md  crush-exp-auto-k51.md  crush-exp-hybrid-sweepga-poasta.md  crush-exp-min-run-5.md  crush-exp-poasta-everywhere.md  crush-exp-sweepga-k31.md  (+80 more)
docs/designs/: localized-smoothxg-polishing.md  syng-integration.md
docs/evaluations/: add-pggb-frequency.md  audit-and-validate.md  audit-poasta-replacement.md  audit-smoothxg-pggb.md  c4-autopoietic-recovery.md  c4-control-provenance-metrics.tsv  c4-control-provenance.md  c4-current-control-edge-artifacts.md  c4-full-sweepga-seed-poa1kb.md  c4-graph-quality-left-edge-recheck.tsv  c4-graph-quality-repeat-filter-sweep-left-edge-recheck.tsv  c4-graph-quality-repeat-filter-sweep.md  c4-graph-quality-repeat-filter-sweep.tsv  c4-graph-quality-scoreboard.tsv  c4-graph-quality.md  c4-k311-poa-threshold-sweep.md  c4-low-seqwish-k-sweep.md  c4-lower-ceiling.md  c4-micro-tangle-spoa-audit-20260604.md  c4-refine-one.md  c4-spoa-true-series-validate.md  c4-syng-tail-diagnosis-20260605.md  compare-aggressive-c4.md  compare-c4-cap64.md  diagnose-c4-query-2.md  diagnose-c4-query.md  diagnose-c4-underalignment.md  diagnose-exact-c4.md  evaluate-abpoa-as.md  evaluate-grouped-multi.md  evaluate-local-compression-testbed.md  explain-and-improve.md  explore-c4-parent.md  fix-c4-alignment-yield.md  fix-c4-localized.md  fix-localized-polish.md  implement-anchored-syng-2.md  implement-explicit-local-evaluation.md  implement-local-compression-fixtures.md  implement-local-compression-testbed-runner.md  (+20 more)
examples/: compare_gfa_paths.rs  neighbor_merge_existing_gfa.rs  poasta_order_driver.rs  povu_decomp_report.rs  syng_anchor_probe.rs  syng_probe.rs  validate_gfa_path_sources.rs
notes/: DEPTH_COMMAND.md  FAST_MODE_IMPLEMENTATION.md  SYNG_NEXT_STEPS.md  SYNG_OPTION3_PAIRWISE_REFINE.md  SYNG_TRANSITIVE_DESIGN.md  SYNG_VS_PAF_VALIDATION.md
scripts/: audit_poasta_replacement_cycles.py  c4-crush-cmaes.py  c4-graph-quality-scoreboard.py  c4-highfreq-mask-crush-sweep.py  c4-low-seqwish-k-sweep.py  c4-motif-local-polish.py  c4_syng_tail_diagnosis.py  demo-batching.sh  demo-gfa.sh  demo-partitioned.sh  demo_gfa_commands.sh  faln2html.py  graph-clean-qc.py  hprcv2-syng-smoke.py  local_compression_testbed.py  partitioning.sh  plot_partitioning_stats.R  procpaf.py  run-c4-aggressive-motif-matrix.py  run-c4-hard-seqwish-k-sweep.sh  run-c4-k311-poa-threshold-sweep.sh  run-c4-sweepga-abpoa10k.py  similarity-poa-vs-fast.sh  validate-flank-aware-crush-c4.py
src/: agc_index.rs  alignment_record.rs  faidx.rs  fast_locate.rs  forest_map.rs  genotyping.rs  gfa_self_loops.rs  graph.rs  graph_badness.rs  graph_pipeline.rs  graph_report.rs  impg.rs  impg_index.rs  lib.rs  local_seed.rs  localized_polish.rs  main.rs  multi_impg.rs  onealn.rs  pack.rs  paf.rs  partition.rs  progressive.rs  projection.rs  render_bundle.rs  resolution.rs  seqidx.rs  sequence_index.rs  sequence_namespace.rs  similarity.rs  smooth.rs  subset_filter.rs  syng.rs  syng_ffi.rs  syng_graph.rs  syng_graph_norm.rs  syng_parallel.rs  syng_transitive.rs  tpa_parser.rs
src/commands/: align.rs  depth.rs  genotype.rs  graph.rs  infer.rs  lace.rs  mod.rs  partition.rs  refine.rs  render.rs  scan.rs  similarity.rs  subgraph.rs  syng2gfa.rs
src/projection/: converter.rs
src/realize/: mod.rs  poa.rs
test_data/: a.fa.fai  c.fa.fai  ref.fa.fai
tests/: test_agc_integration.rs  test_crush_integration.rs  test_genotype_gfa.rs  test_genotype_validation_suite.rs  test_gfa_projection.rs  test_graph_badness.rs  test_graph_output_crush.rs  test_graph_poa.rs  test_graph_seqwish.rs  test_local_compression_testbed.rs  test_localized_polish.rs  test_localized_resolver.rs  test_pipeline_integration.rs  test_realize_integration.rs  test_syng_integration.rs  test_syng_startcount.rs  test_transitive_integrity.rs  yeast.fake-groups.tsv
tests/test_data/: b.fa.fai  test.agc
tests/validation/: battery_syng_vs_paf.sh  compare_syng_vs_paf.sh
(+526 files in other folders)
