[package]
name = "impg"
version = "0.3.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
coitrees = "0.4"
num_cpus = "1.17"
rayon = "1.11"
noodles = { version = "0.100.0", features = ["bgzf"] }
regex = "1.12"
log = "0.4"
env_logger = "0.11"
natord = "1.0"
rustc-hash = "2.1"
libc = "0.2"
nalgebra = "0.33"
indicatif = "0.18"
spoa_rs = { git = "https://github.com/AndreaGuarracino/spoa-rs.git" }
rust-htslib = { version = "0.46.0", default-features = false } # Don't update it, see https://github.com/rust-bio/rust-htslib/issues/434

# Dependencies for AGC format (for sequences) support
ragc-reader = { git = "https://github.com/AndreaGuarracino/ragc", branch = "tweaks" }

# Dependencies for 1aln format (for alignments) support
lib_wfa2 = { git = "https://github.com/AndreaGuarracino/lib_wfa2"}
#lib_wfa2 = { path = "/home/guarracino/Dropbox/git//lib_wfa2"}
tracepoints = { git = "https://github.com/AndreaGuarracino/tracepoints"}
#tracepoints = { path = "/home/guarracino/Dropbox/git/tracepoints"}
#onecode = { path = "/home/guarracino/git/onecode-rs" }
onecode = { git = "https://github.com/pangenome/onecode-rs", rev = "38182c7acf7cccc53509176b1d11001ae6ff2642"}

# Dependencies for lace functionality
handlegraph = { git = "https://github.com/chfi/rs-handlegraph", rev = "3ac575e4216ce16a16667503a8875e469a40a97a" }
bitvec = "1.0.1"
niffler = "3.0.0"
tempfile = "3.23.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }
gzp = "1.0.1"

# Dependencies for graph building (sweepga + seqwish integration)
sweepga = { git = "https://github.com/pangenome/sweepga", rev = "7a7a8d2" }
seqwish = { git = "https://github.com/ekg/seqwish", branch = "rust-2" }

# Dependencies for graph sorting
gfasort = { git = "https://github.com/pangenome/gfasort", rev = "6596f55" }

[features]
default = []
