[package]
name = "impg"
version = "0.4.1"
edition = "2021"
authors = ["Andrea Guarracino <aguarracino@tgen.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
coitrees = "0.4"
num_cpus = "1.17"
rayon = "1.11"
noodles = { version = "0.100.0", features = ["bgzf"] }
regex = "1.12"
log = "0.4"
env_logger = "0.11"
natord = "1.0"
rustc-hash = "2.1"
nalgebra = "0.33"
indicatif = "0.18"
spoa_rs = { git = "https://github.com/AndreaGuarracino/spoa-rs.git" }
rust-htslib = { version = "1.0.0", default-features = false, features = ["libdeflate"] }

# Dependencies for AGC format (for sequences) support
ragc-core = { git = "https://github.com/ekg/ragc", rev = "40e5cad" }

# Dependencies for 1ALN format (for alignments) support
#onecode = { path = "/home/guarracino/git/onecode-rs" }
onecode = { git = "https://github.com/pangenome/onecode-rs", rev = "38182c7acf7cccc53509176b1d11001ae6ff2642"}
# Dependencies for TPA format (for alignments) support
#tpa = { path = "/home/guarracino/git/tpa" }
tpa = { git = "https://github.com/AndreaGuarracino/tpa", rev = "301dc3ff53482d993c065217dbcd8abb6ffff2d9" }
# Dependencies for 1ALN and TPA formats (for alignments) support
lib_wfa2 = { git = "https://github.com/AndreaGuarracino/lib_wfa2", rev = "0fe1ebfb7a364226f3d8d7b84b703611168435c6" }
#lib_wfa2 = { path = "/home/guarracino/Dropbox/git//lib_wfa2"}
#tracepoints = { path = "/home/guarracino/Dropbox/git/tracepoints"}
tracepoints = { git = "https://github.com/AndreaGuarracino/tracepoints", rev = "b73773433561fb36f21136776a7297c5877ab593" }

# Dependencies for lace functionality
handlegraph = { git = "https://github.com/chfi/rs-handlegraph", rev = "3ac575e4216ce16a16667503a8875e469a40a97a" }
bitvec = "1.0.1"
niffler = "3.0.0"
tempfile = "3.23.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }
gzp = "1.0.1"

# Dependencies for graph building (sweepga + seqwish integration)
sweepga = { git = "https://github.com/pangenome/sweepga", rev = "0aa6743", default-features = false }
seqwish = { git = "https://github.com/ekg/seqwish", rev = "80c64c8" }

# Dependencies for graph sorting
gfasort = { git = "https://github.com/pangenome/gfasort", rev = "e23f45e" }

[dev-dependencies]

[features]
default = []


