[workspace]
members = [".", "vendor/gfaffix"]
default-members = [".", "vendor/gfaffix"]

[package]
name = "impg"
version = "0.4.1"
edition = "2021"
authors = ["Andrea Guarracino <aguarracino@tgen.org>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = { version = "2.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.5", features = ["derive"] }
coitrees = "0.4"
num_cpus = "1.17"
rayon = "1.11"
noodles = { version = "0.100.0", features = ["bgzf"] }
regex = "1.12"
log = "0.4"
env_logger = "0.11"
natord = "1.0"
rustc-hash = "2.1"
indexmap = { version = "2", features = ["rayon"] }
nalgebra = "0.33"
indicatif = "0.18"
spoa_rs = { git = "https://github.com/AndreaGuarracino/spoa-rs.git" }
rust-htslib = { version = "1.0.0", default-features = false, features = ["libdeflate"] }

# Dependencies for AGC format (for sequences) support
ragc-core = { git = "https://github.com/AndreaGuarracino/ragc", rev = "e9e4a6f" }

# Dependencies for 1ALN format (for alignments) support
#onecode = { path = "/home/guarracino/git/onecode-rs" }
onecode = { git = "https://github.com/pangenome/onecode-rs", rev = "38182c7acf7cccc53509176b1d11001ae6ff2642"}
# Dependencies for TPA format (for alignments) support
#tpa = { path = "/home/guarracino/git/tpa" }
tpa = { git = "https://github.com/AndreaGuarracino/tpa", rev = "49f1801f9e0108c211571fa2614e517009446afe" }
# Dependencies for 1ALN and TPA formats (for alignments) support
lib_wfa2 = { git = "https://github.com/AndreaGuarracino/lib_wfa2", rev = "8859b6a214141968f37d9bcb22552408318adda0" }
#lib_wfa2 = { path = "/home/guarracino/Dropbox/git//lib_wfa2"}
#tracepoints = { path = "/home/guarracino/Dropbox/git/tracepoints"}
tracepoints = { git = "https://github.com/AndreaGuarracino/tracepoints", rev = "66a5511b0b84d8502f9d7c99efd150616ff2cae3" }

# Dependencies for lace functionality
handlegraph = { git = "https://github.com/chfi/rs-handlegraph", rev = "3ac575e4216ce16a16667503a8875e469a40a97a" }
bitvec = "1.0.1"
niffler = "3.0.0"
tempfile = "3.23.0"
zstd = { version = "0.13.3", features = ["zstdmt"] }
gzp = "1.0.1"

# Dependencies for graph building (sweepga + seqwish integration)
sweepga = { git = "https://github.com/pangenome/sweepga", rev = "bb746ab927c21d6ea3a53ac6e3dd50a7a017fdf3", default-features = false }
seqwish = { git = "https://github.com/pangenome/seqwish", branch = "rust-2" }

# Dependencies for graph sorting
gfasort = { git = "https://github.com/pangenome/gfasort", rev = "e23f45e" }

[dev-dependencies]

[features]
default = []

# It can be removed once the ragc PR is merged and we switch both impg and sweepga to the same upstream rev
[patch."https://github.com/ekg/ragc"]
ragc-core = { git = "https://github.com/AndreaGuarracino/ragc", rev = "e9e4a6f" }
ragc-common = { git = "https://github.com/AndreaGuarracino/ragc", rev = "e9e4a6f" }

# Redirect gfaffix's handlegraph = "0.7.0-alpha.9" to impg's pinned git rev (same API, 3 additive commits newer)
[patch.crates-io]
handlegraph = { git = "https://github.com/chfi/rs-handlegraph", rev = "3ac575e4216ce16a16667503a8875e469a40a97a" }


